# pidgin-clone

./: .mtn-ignore  911.txt  AUTHORS  COPYRIGHT  ChangeLog  ChangeLog.API  ChangeLog.win32  Doxyfile.in  HACKING  Makefile.am  Makefile.mingw  NEWS  README  TODO  VERSION  about.php  acinclude.m4  aim_data.php3  aol.php  aol.shtml  autogen.sh  book.php  bug.php  configure.ac  configure.in  contactinfo.php  default.apspec.in  documentation.php  downloads.php  faq-old.php  faq-old.txt  faq-ssl.php  faq-ssl.txt  faq.php  faq.txt  faqtext.php  gaim-installer.nsi  gaim-ssl.txt  gaim.apspec.in  gaim.css  (+27 more)
doc/: FAQ  Makefile.am  PERL-HOWTO.dox  conversation-signals.dox  finch.1.in  gaim.1  hierarchy.dot  pidgin.1.in  purple-remote.1.in
finch/: Makefile.am  finch.c  finch.h  finch.pc.in  gntaccount.c  gntblist.c  gntconn.c  gntconv.c  gntlog.c  gntlog.h  gntpounce.c  gntrequest.c  gntroomlist.c  gntsound.c  gntui.c
htdocs/: .htaccess  ChangeLog  CommitLog  about.php  home.php  index.php  listinfo.html  pidgin-2.4.2-icq6.patch  version.php
images/: Makefile.am  logo.xcf  powered_by_libgaim.xcf
inc/: Table.inc.php  blurb.download.inc  blurb.download_new.inc  blurb.downloaddetect.inc  database.inc.php  faq-functions.inc.php  footer.inc  header.inc  html.inc.php  langdetect.inc  multibox.header.inc  news.inc.php  plugins.inc.php  section.download.inc  section.inc  section.news.inc  template.inc.php  users.inc.php  utils.inc.php  version.inc  version.inc.php
l10n/: index.xml  pidgin.pot
libpurple/: Makefile.am  Makefile.mingw  account.c  account.h  accountmanager.c  accountmanager.h  blist-node.c  blist-node.h  blist.c  blist.h  buddy.c  buddy.h  buddyicon.c  chat.c  chat.h  cipher.c  cipher.h  config.h  connection.c  connection.h  contact.c  contact.h  conversation.c  conversation.h  core.c  core.h  dbus-analyze-functions.py  dbus-server.c  debug.c  debug.h  des3cipher.c  des3cipher.h  descipher.c  descipher.h  ft.h  gcipher.c  gcipher.h  ghash.c  ghash.h  group.c  (+52 more)
libpurple/plugins/mono/api/: Account.cs  BlistNode.cs  Buddy.cs  BuddyList.Signals.cs  BuddyList.cs  Contact.cs  Debug.cs  Event.cs  Makefile.am  Object.cs  ObjectManager.cs  PObject.cs  PurplePlugin.cs  Signal.Marshall.cs  Signal.cs  Status.cs  Util.cs
libpurple/protocols/facebook/: Makefile.am  facebook.nsi  fb_blist.c  fb_blist.h  fb_connection.c  fb_connection.h  fb_conversation.c  fb_friendlist.c  fb_friendlist.h  fb_info.c  fb_managefriends.c  fb_managefriends.h  fb_messages.c  fb_messages.h  fb_notifications.c  fb_util.c  fb_util.h  libfacebook.c  libfacebook.h  pidgin-facebookchat.rc  rss.xml
libpurple/protocols/telepathy/: Makefile.am  Makefile.mingw  telepathy.c  telepathy.h  telepathy_account.c  telepathy_account.h  telepathy_avatar.c  telepathy_avatar.h  telepathy_channel.c  telepathy_channel.h  telepathy_channel_list.c  telepathy_channel_list.h  telepathy_channel_text.c  telepathy_channel_text.h  telepathy_client.c  telepathy_client.h  telepathy_connection.c  telepathy_connection.h  telepathy_contact.c  telepathy_contact.h  telepathy_utils.c  telepathy_utils.h
libpurple/tests/: Makefile.am  check_libpurple.c  check_mono.c  test_cipher.c
penguin/: Penguin.sln  README.txt
pidgin/: Makefile.am  gtkaccount.c  gtkblist.c  gtkconn.c  gtkconv.c  gtkconv.h  gtkdialogs.c  gtkdocklet.c  gtkimhtml.c  gtklog.c  gtklog.h  gtkmain.c  gtknotify.c  gtkpounce.c  gtkprefs.c  gtkprivacy.c  gtkroomlist.c  gtksound.c  gtkstatusbox.c  gtkthemes.c  gtkthemes.h  gtkutils.c  gtkwebview.c  gtkwebview.h  gtkwhiteboard.c  gtkwhiteboard.h  (+3 more)
pidgin/crash/: Makefile.am  crashhandler.cc  crashhandler.cpp  crashhandler.h  crashreporter.c  crashreporter.h  minidump_stackwalk.cc
pidgin/pixmaps/: Makefile.am  arcOp.xpm  boxOp.xpm  brushOp.xpm  clineOp.xpm  eraseOp.xpm  fillOp.xpm  filled.xpm  lineOp.xpm  ovalOp.xpm  pencilOp.xpm  textOp.xpm  unfilled.xpm
plugins/purple-remote/: Makefile.am  remote-socket.c  remote-socket.h  remote.c  remote.h
psyduck/: Makefile.am  defines.h  psyduck-connection-manager.c  psyduck-connection-manager.h  psyduck.c
src/: Makefile.am  Makefile.mingw  account.c  account.h  accountopt.c  accountopt.h  aim.c  aimaccount.xml  away.c  blist.c  blist.h  book.xml  browser.c  buddy.c  buddy_chat.c  buddyicon.c  buddyicon.h  cmds.h  connection.c  connection.h  conversation.c  conversation.h  core.c  core.h  custom.xsl.in  dialogs.c  ft.c  ft.h  gaim.h  gaimrc.c  gettingstarted.xml  gfdl.xml  gtkaccount.c  gtkblist.c  gtkconn.c  gtkconv.c  gtkdebug.c  gtkdialogs.c  gtkeventloop.c  gtkft.c  (+41 more)
src/images/: Makefile.am
src/protocols/: Makefile.am
src/protocols/bonjour/: Makefile  Makefile.in  bonjour.c  dns_sd.c  dns_sd.h  jabber.c  jabber.h
src/protocols/gg/: gg.c  libgg.c
src/protocols/icq/: gaim_icq.c
src/protocols/irc/: cmds.c  dcc_send.c  irc.c  irc.h  msgs.c  parse.c
src/protocols/jabber/: buddy.c  chat.c  iq.c  jabber.c  message.c  presence.c  roster.c  si.c
src/protocols/msn/: directconn.c  error.c  httpconn.c  msg.c  msn.c  nexus.c  notification.c  session.c  slp.c  slp.h  slpcall.c  slplink.c  switchboard.c  table.c  user.c  user.h  userlist.c  utils.c
src/protocols/napster/: napster.c
src/protocols/novell/: novell.c
src/protocols/oscar/: Makefile.am  aim.h  aim_cbtypes.h  aim_internal.h  auth.c  bart.c  bstream.c  chat.c  conn.c  ft.c  im.c  locate.c  oscar.c  rxhandlers.c  rxqueue.c  service.c  ssi.c  txqueue.c  util.c
src/protocols/rendezvous/: Makefile.am  rendezvous.c
src/protocols/silc/: buddy.c  chat.c  ft.c  ops.c  pk.c  silc.c  silcgaim.h  util.c
src/protocols/toc/: toc.c
src/protocols/trepia/: trepia.c
src/protocols/yahoo/: Makefile.am  util.c  yahoo.c  yahoo.h  yahoo_filexfer.c  yahoo_picture.c  yahoo_profile.c  yahoochat.c
src/protocols/zephyr/: ZLocations.c  ZVariables.c  sysdep.h  zephyr.c
src/win32/: libc_interface.c  libc_interface.h  win32dep.c
src/win32/nsis/: gaim-plugin.nsh  langmacros.nsh
src/win32/nsis/translations/: dutch.nsh  english.nsh  french.nsh  german.nsh  hungarian.nsh  japanese.nsh  slovenian.nsh  swedish.nsh  trad-chinese.nsh
(+717 files in other folders)
