man_MANS = pidgin.1 purple-remote.1

EXTRA_DIST = \
	the_penguin.txt \
	gaims_funniest_home_convos.txt \
	CREDITS \
	FAQ \
	PERL-HOWTO.dox \
	account-signals.dox \
	blist-signals.dox \
	connection-signals.dox \
	conversation-signals.dox \
	gtkaccount-signals.dox \
	gtkblist-signals.dox \
	gtkconv-signals.dox \
	gtkimhtml-signals.dox \
	plugin-ids.dox \
	pidgin.1.in \
	purple-remote.1.in
