man_MANS = pidgin.1 purple-remote.1

EXTRA_DIST = \
	the_penguin.txt \
	pidgins_funniest_home_comvos.txt \
	CREDITS \
	FAQ \
	PERL-HOWTO.dox \
	account-signals.dox \
	blist-signals.dox \
	connection-signals.dox \
	conversation-signals.dox \
	gtkaccount-signals.dox \
	gtkblist-signals.dox \
	gtkconv-signals.dox \
	gtkimhtml-signals.dox \
	plugin-ids.dox \
	pidgin.1.in \
	purple-remote.1.in
