SUBDIRS = animations buddy_icons dialogs emblems emotes icons protocols status toolbar tray

EXTRA_DIST = \
		edit.png			\
		logo.png			\
		pause.png			\
		arrow-down.xpm		\
		arrow-up.xpm		\
		arrow-right.xpm		\
		arrow-left.xpm		\
		Makefile.mingw	\
		pidgin.ico \
        eraseOp.xpm \
        lineOp.xpm \
        pencilOp.xpm \
        textOp.xpm \
        boxOp.xpm \
        clineOp.xpm  \
        brushOp.xpm \
		arcOp.xpm \
		ovalOp.xpm \
		filled.xpm \
		fillOp.xpm \
		unfilled.xpm \
        gtk-add.png \
        gtk-close.png \
        gtk-edit.png \
		video.png


pidginbuttonpixdir = $(datadir)/pixmaps/pidgin/buttons
pidginbuttonpix_DATA = edit.png pause.png

pidgindistpixdir = $(datadir)/pixmaps/pidgin
pidgindistpix_DATA = logo.png arrow-down.xpm arrow-left.xpm arrow-right.xpm arrow-up.xpm eraseOp.xpm lineOp.xpm  pencilOp.xpm textOp.xpm boxOp.xpm clineOp.xpm brushOp.xpm arcOp.xpm ovalOp.xpm filled.xpm fillOp.xpm unfilled.xpm video.png gtk-add.png gtk-close.png gtk-edit.png

